objects/ACV_Assets__c/ACV_Assets__c.object-meta.xml
<CustomObject>
    <label>ACV Asset</label>
    <nameField>
        <label>ACV Assets  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ACV Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>