objects/ACV_Assets__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brigadier by Kyocera</fullName>
            </value>
            <value>
                <fullName>Casio GzOne Ravine</fullName>
            </value>
            <value>
                <fullName>CF-54</fullName>
            </value>
            <value>
                <fullName>CRADLEPOINT - AER1600LP4</fullName>
            </value>
            <value>
                <fullName>CRADLEPOINT - MC400-1200M-B</fullName>
            </value>
            <value>
                <fullName>CRADLEPOINT MC400LP6</fullName>
            </value>
            <value>
                <fullName>CRADLEPOINT - MC400LPE</fullName>
            </value>
            <value>
                <fullName>Dell Monitor</fullName>
            </value>
            <value>
                <fullName>DURA XV LTE WITH CAMERA</fullName>
            </value>
            <value>
                <fullName>DURAXVPLUS BY KYOCERA</fullName>
            </value>
            <value>
                <fullName>E300</fullName>
            </value>
            <value>
                <fullName>Fortigate 100D</fullName>
            </value>
            <value>
                <fullName>FortiGate 100E</fullName>
            </value>
            <value>
                <fullName>FortiGate 300D</fullName>
            </value>
            <value>
                <fullName>FortiGate 60D</fullName>
            </value>
            <value>
                <fullName>FortiGate 60E</fullName>
            </value>
            <value>
                <fullName>FortiGate 60E-POE</fullName>
            </value>
            <value>
                <fullName>FortiGate 60F</fullName>
            </value>
            <value>
                <fullName>FortiGate 80E</fullName>
            </value>
            <value>
                <fullName>FortiGate 80E-POE</fullName>
            </value>
            <value>
                <fullName>FortiGate 90D</fullName>
            </value>
            <value>
                <fullName>FortiGate 90D-POE</fullName>
            </value>
            <value>
                <fullName>GALAXYS8PLUS</fullName>
            </value>
            <value>
                <fullName>iPad 32GB</fullName>
            </value>
            <value>
                <fullName>IPAD 7TH GEN 32GB GRAY VZ</fullName>
            </value>
            <value>
                <fullName>IPAD 9.7 32GB SPACE GRAY VZ</fullName>
            </value>
            <value>
                <fullName>IPAD PRO 11 INCH 256GB SGRAY VZ</fullName>
            </value>
            <value>
                <fullName>IPHONE 11 BLACK 64GB SO</fullName>
            </value>
            <value>
                <fullName>IPHONE 11 PRO MAX GRAY 512GB VZ</fullName>
            </value>
            <value>
                <fullName>IPHONE 11 PRO MAX GRAY 64GB VZ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>