objects/ACV_Assets__c/fields/Unassigned_Count__c.field-meta.xml
<CustomField>
    <fullName>Unassigned_Count__c</fullName>
    <label>Unassigned Count</label>
    <summaryFilterItems>
        <field>Asset_Assignment__c.Status__c</field>
        <operation>equals</operation>
        <value>Unassigned</value>
    </summaryFilterItems>
    <summaryForeignKey>Asset_Assignment__c.ACV_Asset__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>